Bug 31114 - eDP panel is slow to "turn on" when it has been turned off by power management
Summary: eDP panel is slow to "turn on" when it has been turned off by power management
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other Linux (All)
: low normal
Assignee: Jesse Barnes
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-25 16:05 UTC by Jim Gettys
Modified: 2017-07-24 23:06 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Jim Gettys 2010-10-25 16:05:54 UTC
On an eDP panel on an HP 2540p laptop, if the screen is put to sleep to save power, it takes about a second after touching the keyboard or mouse for it to turn back on again.

Something isn't quite right....

This may or may not be related to bug #31112.
Comment 1 Chris Wilson 2010-10-28 03:09:23 UTC
Deliberately. I was sure someone would noticed all of the msleep(300) scattered throughout the eDP code.
Comment 2 Chris Wilson 2010-12-06 03:42:06 UTC
Assigning to Jesse in the hope he'll get a chance to review all the excruitatingly long sleeps, or at least add comments to warn of the dangers of tweaking them. ;-)
Comment 3 Chris Wilson 2011-01-25 04:18:43 UTC
drm-intel-next commit 987a709e1589cf10e250e04ce9df910b735d4f60
Author: Jesse Barnes <jbarnes@virtuousgeek.org>
Date:   Mon Jan 24 17:10:53 2011 -0800

    drm/i915: remove now unnecessary delays in eDP panel power sequencing
    
    Now that we're doing the right thing elsewhere, these are no longer
    necessary.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=31114
    Signed-off-by: Jesse Barnes <jbarnes@virtuousgeek.org>
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.